# vor-fix-calculator

./: .editorconfig  .flake8  .gitignore  .pylintrc  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/: __init__.py  calculations.py  constants.py  file_operations.py  formatters.py  models.py  ui.py  validators.py
tests/: __init__.py  test_calculations.py  test_constants.py  test_file_operations.py  test_formatters.py  test_models.py  test_validators.py
